<resources>
    <string name="app_name">FindMyRouteApp</string>
    <string name="title_activity_maps">Map</string>

    // Login Screen
    <string name="login_username">Kullanıcı Adı</string>
    <string name="login_password">Şifre</string>
    <string name="login_sign_in">Giriş Yap</string>
    <string name="login_sign_up">Kayıt Ol</string>
    <string name="login_wrong_credentials">Kullanıcı adı veya şifre yanlış</string>
    <string name="login_invalid_username">Kullanıcı adı boş olamaz</string>
    <string name="login_invalid_password">Şifre boş olamaz</string>
    <string name="login_sign_up_success">Kaydolma başarılı. Giriş yapınız.</string>
    <string name="login_username_exist">Bu kullanıcı adı kullanılmaktadır</string>

    // Save Location Fragment
    <string name="save_location_save">Kaydet</string>
    <string name="save_location_cancel">İptal</string>
    <string name="save_location_name">Adı</string>
    <string name="save_location_description">Açıklama</string>

    // MapsActivity
    <string name="map_create_route">Rota Oluştur</string>
    <string name="map_show_details">Detay Göster</string>
    <string name="map_show_location">Konuma Git</string>
    <string name="map_route_not_found">Belirtilen noktalar arasında rota bulunamıyor</string>
    <string name="map_request_gps">Devam etmek için cihazınızın konum özelliğini açın.</string>
    <string name="map_request_gps_yes">Tamam</string>
    <string name="map_request_gps_no">Hayır</string>

    // Argument Keys
    <string name="save_location_key">saveLocationKey</string>
    <string name="fragment_state">stateKey</string>
    <string name="save_location_place_key">placeKey</string>

</resources>